Kevin Prox: Added confirmation mail functions

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,7 +23,7 @@ block content
 								a#problemLogin(name='problemLogin' class='problem')
 							fieldset
 								label Email
-								input#emailLogin(type='text' name='emailLogin')
+								input#emailLogin(type='text' name='emailLogin' placeholder='example@globant.com')
 							fieldset
 								label(for='password') Password
 								input#passwordLogin(type='password' name='passwordLogin')
@@ -42,7 +42,7 @@ block content
 								a#problemRegister(name='problemRegister' class='problem')
 							fieldset
 								label Email
-								input#emailRegister(type='text' name='emailRegister')
+								input#emailRegister(type='text' name='emailRegister' placeholder='example@globant.com')
 							fieldset
 								label(for='password') Password
 								input#passwordRegister(type='password' name='passwordRegister')
