Kevin Prox: Added confirmation mail functions

--- a/views/conf.jade
+++ b/views/conf.jade
@@ -3,5 +3,5 @@ extends layout
 block content
 	h2 Thanks for verifying your email!
 	
-	h2 "You can now login in "
-		a(href='https://quote-it.herokuapp.com') Quote It!
+	h2 You can now login in 
+		a(class='pageLink' href='https://quote-it.herokuapp.com') ✩ Quote It! ✩
