--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -415,3 +415,16 @@ h2 {
 .otherQuotesTitle {
 	cursor: pointer;
 }
+
+.pageLink {
+	font-family: Arial, Helvetica, sans-serif;
+  	font-size: 140%;
+  	font-style: italic; 
+  	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	background-clip: text;
+	color: #D6C033;
+	text-shadow: 0px 3px 3px rgba(255,255,255,0.5),0px -1px 1px rgba(0,0,0,.3);
+	text-decoration: none;
+	cursor: pointer;
+}
