Kevin Prox: Added confirmation mail functions

--- a/views/conf.jade
+++ b/views/conf.jade
@@ -4,4 +4,4 @@ block content
 	h2 Thanks for verifying your email!
 	
 	h2 You can now login in 
-		a(class='pageLink' href='quote-it.herokuapp.com') ✩ Quote It! ✩
+		a(class='pageLink' href='http://quote-it.herokuapp.com') ✩ Quote It! ✩
