Kevin Prox: Forgot pass function

--- a/views/index.jade
+++ b/views/index.jade
@@ -27,6 +27,7 @@ block content
 							fieldset
 								label(for='password') Password
 								input#passwordLogin(type='password' name='passwordLogin')
+							a#forgotPass(href='#' name='forgotPass' class='forgotPass') Forgot Password?
 							input#login(type='submit' value='Sign In')
 			// / LOGIN POP
 			// REGISTER POP                
