Kevin Prox: Playing with animation

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/animate.css')
   body
     block content
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
+    script(src='javascripts/jquery.lettering.js') 
+    script(src='javascripts/jquery.textillate.js') 
     script(src='/javascripts/global.js')
