Kevin Prox: Playing with animation

--- a/views/index.jade
+++ b/views/index.jade
@@ -77,7 +77,7 @@ block content
 	
 		// TOP QUOTES
 		#topQuotes(class='topQuotes')
-			h2#topQuotesTitle(data-out-effect='hinge' class='topQuotesTitle') ✩ TOP QUOTES ✩
+			h2#topQuotesTitle(class='topQuotesTitle') ✩ TOP QUOTES ✩
 			
 			#topQuotesWrapper(class='topQuotesWrapper')
 			
