--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ block content
 	
 		#logo(class='logo')
 			img#logoImg(class='logoImg' src='../images/Logo.png')
+			img#appName(class='appName' src='../images/logo_QI.png')
 
 		#container(class='container')
         
