Kevin Prox: Playing with animations

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,3 +10,4 @@ html
     script(src='javascripts/jquery.lettering.js') 
     script(src='javascripts/jquery.textillate.js') 
     script(src='/javascripts/global.js')
+    script(scr='/javascripts/typed.js')
