--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,7 +32,7 @@ h2 {
   	-webkit-background-clip: text;
 	-moz-background-clip: text;
 	background-clip: text;
-	color: transparent;
+	color: #5B7686;
 	text-shadow: 0px 3px 3px rgba(255,255,255,0.5),0px -1px 1px rgba(0,0,0,.3);
 }
 
@@ -54,7 +54,7 @@ h2 {
   	-webkit-background-clip: text;
 	-moz-background-clip: text;
 	background-clip: text;
-	color: #0A122A;
+	color: #BBCFDA;
 	text-shadow: 0px 3px 3px rgba(255,255,255,0.5),0px -1px 1px rgba(0,0,0,.3);
 	margin: 0px 0px 0px 20px;
 }
