Kevin Prox: Refactoring - Modular

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,3 +11,4 @@ html
     script(src='javascripts/jquery.textillate.js') 
     script(src='/javascripts/global.js')
     script(src='/javascripts/email.tools.js')
+    script(src='/javascripts/quotes.tools.js')
