Kevin Prox: Refactoring - Modular

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,3 +12,4 @@ html
     script(src='/javascripts/global.js')
     script(src='/javascripts/email.tools.js')
     script(src='/javascripts/quotes.tools.js')
+    script(src='/javascripts/general.utils.js')
