Kevin Prox: Refactoring - Modular

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,5 +13,6 @@ html
     script(src='/javascripts/global.js')
     script(src='/javascripts/email.tools.js')
     script(src='/javascripts/quotes.tools.js')
+    script(src='/javascripts/users.tools.js')
     script(src='/javascripts/general.utils.js')
     script(src='/javascripts/decorative.tools.js')
