--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,15 @@ block content
 	
 		#logo(class='logo')
 			img#logoImg(class='logoImg' src='../images/Logo.png')
+			
+		#upload-area
+			#preview
+				img#thumb (width="100px" height="100px" src="http://cdn.css-tricks.com/images/icons/128px/zurb.png")
+		
+			form#newHotnessForm (action="/playground/ajax_upload")
+				label Upload a Picture of Yourself
+				input#imageUpload (type="file" size="20")
+				button (class="button" type="submit") Save
 
 		#container(class='container')
         
