Kevin Prox: Testing Animations

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,3 +16,4 @@ html
     script(src='/javascripts/users.tools.js')
     script(src='/javascripts/general.utils.js')
     script(src='/javascripts/decorative.tools.js')
+    script(src='/javascripts/jquery.typetype.js')
