--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/animate.css')
     link(rel='shortcut icon' href='/images/QI-favicon.ico')
+    link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Sansita+One')
   body
     block content
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
