Kevin Prox: Testing Animations

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block content
 	
 		#logo(class='logo')
 			img#logoImg(class='logoImg' src='../images/Logo.png')
-			a#textarea(class='textarea')
+			a#textarea(class='textArea')
 
 		#container(class='container')
         
