--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,8 @@ block content
 	
 		#logo(class='logo')
 			img#logoImg(class='logoImg' src='../images/Logo.png')
-			a#textarea(class='textArea')
+			#pageName
+				a#textarea(class='textArea')
 
 		#container(class='container')
         
