--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block content
 	
 		#logo(class='logo')
 			img#logoImg(class='logoImg' src='../images/Logo.png')
-			#pageName
+			#pageName(class='pageName')
 				a#textarea(class='textArea')
 
 		#container(class='container')
