--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,7 +36,7 @@ body {
 
 /* Top Quote Style */
 h2 {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Segoe UI","Segoe","Open Sans",sans-serif;
   	font-size: 200%;
   	font-style: italic; 
   	margin: 30px;
@@ -48,7 +48,7 @@ h2 {
 }
 
 .author {
-	font-family: arial;
+	font-family: "Segoe UI","Segoe","Open Sans",sans-serif;
 	font-style: oblique;
 	font-size: 90%;
 	color: #6699CC;
@@ -59,7 +59,7 @@ h2 {
 }
 
 .topQuoteText {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Segoe UI","Segoe","Open Sans",sans-serif;
   	font-size: 140%;
   	font-style: italic; 
   	-webkit-background-clip: text;
@@ -231,7 +231,7 @@ h2 {
 
 /* Register Container (default to float:right) */
 .userName {
-	font-family: arial;
+	font-family: "Segoe UI","Segoe","Open Sans",sans-serif;
 	font-size: 20px;
 	margin: -40px 0 0 0;
 	float: right;
@@ -364,7 +364,7 @@ h2 {
 }
 
 .newQuoteForm label {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Segoe UI","Segoe","Open Sans",sans-serif;
   	font-size: 140%;
   	font-style: italic; 
   	-webkit-background-clip: text;
@@ -432,7 +432,7 @@ h2 {
 }
 
 .pageLink {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Segoe UI","Segoe","Open Sans",sans-serif;
   	font-size: 140%;
   	font-style: italic; 
   	-webkit-background-clip: text;
